# stencil-lib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/stencil_lib/: stencil_lib.py
wheels/: Stencil_Lib.ipynb  index.html  stencil_lib-0.1.0-py3-none-any.whl
