[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stencil_lib"
version = "0.1.0"
description = """Generic parametric stencil generator for Python. 
Renders print-accurate transparent PNGs from real-world dimensions (cm/DPI) — ellipses (Trammel of Archimedes  ), Archimedean and golden spirals, spirographs, rose curves, and polygons. One engine, pluggable curve registry. 
Built for AR overlays ."""
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
